--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,26 @@
-apparmor==4.1.0
-application-utility==1.4.0
-attrs==24.1.0
-btrfsutil==6.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-cryptography==44.0.3
-cupshelpers==1.0
-dbus-python==1.4.0
-distlib==0.3.9
-docopt==0.6.2
-filelock==3.18.0
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.2.0
+et_xmlfile==2.0.0
+fastapi==0.115.12
+h11==0.16.0
 idna==3.10
-keyutils==0.6
-legacy-cgi==2.6.3
-LibAppArmor==4.1.0
-netsnmp-python==1.0a1
-nftables==0.1
-npyscreen==4.10.5
-packaging==25.0
-pacman_mirrors==4.27
-pillow==11.2.1
-platformdirs==4.3.6
-pycairo==1.28.0
-pycparser==2.22
-pycups==2.0.4
-PyGObject==3.52.3
-PyQt5==5.15.11
-PyQt5_sip==12.17.0
-pysmbc==1.0.25.1
-PyYAML==6.0.2
-reportlab==4.2.2
-requests==2.32.3
-smbus==1.1
-TBB==0.2
-udiskie==2.5.7
-urllib3==2.4.0
-virtualenv==20.28.0
-wheel==0.45.1
+joblib==1.5.0
+numpy==2.2.5
+openpyxl==3.1.5
+pandas==2.2.3
+pydantic==2.11.4
+pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+scikit-learn==1.6.1
+scipy==1.15.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+threadpoolctl==3.6.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
