--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 uvicorn==0.34.2
+
+app~=0.0.1
+requests~=2.32.4
+httpx~=0.28.1
